--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini-Yelp</title>
+    <link href='src/index.css' rel='stylesheet'/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
+    <header>
+      <div class='logo-container'>
+        <img src="public/yelplogo.png" alt="Yelp logo" />
+      </div>
+      <div class='search-container'>
+        <input class='find-input' type="text" id="tagInput" placeholder="Find burgers, barbers, spas, handymen..." />
+        <input class='near-input' type="text" id="locationInput" placeholder="Near...">
+        <button id="searchButton">
+          <i class="fas fa-search"></i>
+        </button>
+      </div>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
