--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
         <img src="public/yelplogo.png" alt="Yelp logo" />
       </div>
       <div class='search-container'>
-        <input class='find-input' type="text" id="tagInput" placeholder="Find burgers, barbers, spas, handymen..." />
-        <input class='near-input' type="text" id="locationInput" placeholder="Near...">
+        <input 
+          class='tag-input' 
+          type="text" id="tagInput" 
+          placeholder="Find burgers, barbers, spas, handymen..." 
+        />
+        <input 
+          class='location-input' 
+          type="text" id="locationInput" 
+          placeholder="Near..."
+        />
         <button id="searchButton">
           <i class="fas fa-search"></i>
         </button>
       </div>
     </header>
+    <ul id='restaurantList'></ul>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
